[project]
name = "textual-transit"
version = "0.1.0"
description = "A Textual-based TUI (Text User Interface) application for displaying Metro Transit trip updates, vehicle positions, and service alerts in your terminal."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gtfs-realtime-bindings>=1.0.0",
    "protobuf>=6.30.2",
    "requests>=2.32.3",
    "textual>=3.1.1",
]

[dependency-groups]
dev = ["ruff>=0.11.10", "textual-dev>=1.7.0"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
lint.select = ["E", "F", "I"]
lint.ignore = []
lint.fixable = ["ALL"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
